[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/models/ui/MessageHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 256
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="MessageHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="EasyButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -1100.0
margin_right = 180.0
margin_bottom = -900.0
custom_fonts/font = SubResource( 1 )
text = "Easy"

[node name="NormalButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -800.0
margin_right = 180.0
margin_bottom = -600.0
custom_fonts/font = SubResource( 1 )
text = "Normal"

[node name="HardButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -500.0
margin_right = 180.0
margin_bottom = -300.0
custom_fonts/font = SubResource( 1 )
text = "Hard"

[node name="StartMessage" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 933.0
custom_fonts/font = SubResource( 3 )
text = "
Aircraft
War"
align = 1

[node name="EndMessage" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -385.5
margin_top = -310.5
margin_right = 385.5
margin_bottom = 310.5
custom_fonts/font = SubResource( 3 )
text = "Game
Over"
align = 1

[node name="MusicCheck" type="CheckButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -234.0
margin_top = -184.0
margin_right = -76.0
margin_bottom = -144.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 4 )
action_mode = 0
text = "Music"
align = 2
expand_icon = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="EndTimer" type="Timer" parent="."]

[connection signal="pressed" from="EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="toggled" from="MusicCheck" to="." method="_on_MusicCheck_toggled"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
